contact us page was added

--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
- <title>Welcome To Ticket Home Page</title>
+ <title>Contact Us - Ticket App</title>
 
 </head>
 <body>
-	<h1>Home Page</h1>
-	<p>This new line was added today</p>
-
-
+	<h1>Contact Us</h1>
+  <p>I am a new content</p>
 </body>
 
 </html>
