the project after meeting with the president

--- a/buy.html
+++ b/buy.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
- <title></title>
+ <title>Buy ticket</title>
 
 </head>
 <body>
-	
+	<h1>come and buy ticket</h1>
 	
 </body>
 
